ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
spec:
  rules:
  - host: minikube
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: dashboard-service
            port: 
              number: 5000
